--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ use_parentheses = true
 lines_after_imports = 2
 default_section = THIRDPARTY
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
-known_first_party = pyFV3,ndsl
+known_first_party = pyFV3,ndsl,pySHiELD
 known_third_party = f90nml,pytest,xarray,numpy,mpi4py,gt4py
 
 [mypy]
