--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,8 +20,8 @@ jobs:
             sudo apt-get install libopenmpi-dev
         - name: Install Python packages
           run: |
-            python -m pip install --upgrade pip
-            pip install -r requirements_dev.txt -r requirements_lint.txt
+            python -m pip install --upgrade pip setuptools wheel
+            pip install .[ndsl]
         - name: Run lint via pre-commit
           run: |
             pre-commit run --all-files
