--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,7 +21,7 @@ jobs:
         - name: Install Python packages
           run: |
             python -m pip install --upgrade pip setuptools wheel
-            pip install .[ndsl]
+            pip install .[develop]
         - name: Run lint via pre-commit
           run: |
             pre-commit run --all-files
