--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -24,7 +24,7 @@ jobs:
         - name: Install Python packages
           run: |
             python -m pip install --upgrade pip setuptools wheel
-            pip install .[test]
+            pip install .[ndsl,test]
         - name: Download data
           run: |
             mkdir -p test_data
