--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -40,20 +40,23 @@ jobs:
           run: |
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
-              --backend=FvTp2d \
+              --backend=numpy \
+              --which_module=FvTp2d \
               --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
               ./tests/savepoint
         - name: Numpy D_SW
           run: |
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
-              --backend=D_SW \
+              --backend=numpy \
+              --which_module=D_SW \
               --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
               ./tests/savepoint
         - name: Numpy Remapping
           run: |
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
-              --backend=Remapping \
+              --backend=numpy \
+              --which_module=Remapping \
               --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
               ./tests/savepoint
