--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -41,7 +41,7 @@ jobs:
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=numpy \
-              --which_module=FvTp2d \
+              --which_modules=FvTp2d \
               --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
               ./tests/savepoint
         - name: Numpy D_SW
@@ -49,7 +49,7 @@ jobs:
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=numpy \
-              --which_module=D_SW \
+              --which_modules=D_SW \
               --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
               ./tests/savepoint
         - name: Numpy Remapping
@@ -57,6 +57,6 @@ jobs:
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=numpy \
-              --which_module=Remapping \
+              --which_modules=Remapping \
               --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
               ./tests/savepoint
