--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -25,19 +25,14 @@ jobs:
           run: |
             python -m pip install --upgrade pip setuptools wheel
             pip install .[ndsl,test]
-        - name: Download data
+        - name: Prepare test_data
           run: |
             mkdir -p test_data
-            cd test_data
-            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6_ranks_standard.FvTp2d.tar.gz
-            tar -xzvf 8.1.3_c12_6_ranks_standard.FvTp2d.tar.gz
-            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6_ranks_standard.D_SW.tar.gz
-            tar -xzvf 8.1.3_c12_6_ranks_standard.D_SW.tar.gz
-            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6_ranks_standard.Remapping.tar.gz
-            tar -xzvf 8.1.3_c12_6_ranks_standard.Remapping.tar.gz
-            cd -
         - name: Numpy FvTp2d
           run: |
+            cd test_data
+            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6_ranks_standard.FvTp2d.tar.gz
+            cd -
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=numpy \
@@ -46,6 +41,10 @@ jobs:
               ./tests/savepoint
         - name: Numpy D_SW
           run: |
+            cd test_data
+            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6_ranks_standard.D_SW.tar.gz
+            tar -xzvf 8.1.3_c12_6_ranks_standard.D_SW.tar.gz
+            cd -
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=numpy \
@@ -54,9 +53,31 @@ jobs:
               ./tests/savepoint
         - name: Numpy Remapping
           run: |
+            cd test_data
+            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6_ranks_standard.Remapping.tar.gz
+            tar -xzvf 8.1.3_c12_6_ranks_standard.Remapping.tar.gz
+            cd -
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=numpy \
               --which_modules=Remapping \
+              --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
+              ./tests/savepoint
+        - name: Orchestrated dace:cpu FVDynamics
+          run: |
+            cd test_data
+            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6_ranks_standard.FVDynamics.tar.gz
+            tar -xzvf 8.1.3_c12_6_ranks_standard.FVDynamics.tar.gz
+            cd -
+            export FV3_DACEMODE=BuildAndRun
+            export PACE_FLOAT_PRECISION=64
+            export PACE_TEST_N_THRESHOLD_SAMPLES=0
+            export OMP_NUM_THREADS=1
+            export PACE_LOGLEVEL=Debug
+            mpirun -np 6 --oversubscribe pytest \
+              -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
+              --backend=dace:cpu \
+              -m parallel \
+              --which_modules=FVDynamics \
               --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
               ./tests/savepoint
