--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -32,6 +32,7 @@ jobs:
           run: |
             cd test_data
             wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6_ranks_standard.FvTp2d.tar.gz
+            tar -xzvf 8.1.3_c12_6_ranks_standard.FvTp2d.tar.gz
             cd -
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
