--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [3.11.7]
+        python: [3.8.12]
     steps:
         - name: Checkout repository
           uses: actions/checkout@v3.5.2
@@ -75,7 +75,7 @@ jobs:
             export PACE_TEST_N_THRESHOLD_SAMPLES=0
             export OMP_NUM_THREADS=1
             export PACE_LOGLEVEL=Debug
-            mpirun -np 6 --oversubscribe pytest \
+            mpirun -mca orte_abort_on_non_zero_status 1 -np 6 --oversubscribe pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=dace:cpu \
               -m parallel \
