--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -79,6 +79,7 @@ jobs:
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=dace:cpu \
               -m parallel \
+              --which_rank=0 \
               --which_modules=FVDynamics \
               --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
               ./tests/savepoint
