--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -31,8 +31,8 @@ jobs:
         - name: Numpy FvTp2d
           run: |
             cd test_data
-            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6_ranks_standard.FvTp2d.tar.gz
-            tar -xzvf 8.1.3_c12_6_ranks_standard.FvTp2d.tar.gz
+            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.FvTp2d.tar.gz
+            tar -xzvf 8.1.3_c12_6ranks_standard.FvTp2d.tar.gz
             cd -
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
@@ -43,8 +43,8 @@ jobs:
         - name: Numpy D_SW
           run: |
             cd test_data
-            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6_ranks_standard.D_SW.tar.gz
-            tar -xzvf 8.1.3_c12_6_ranks_standard.D_SW.tar.gz
+            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.D_SW.tar.gz
+            tar -xzvf 8.1.3_c12_6ranks_standard.D_SW.tar.gz
             cd -
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
@@ -55,8 +55,8 @@ jobs:
         - name: Numpy Remapping
           run: |
             cd test_data
-            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6_ranks_standard.Remapping.tar.gz
-            tar -xzvf 8.1.3_c12_6_ranks_standard.Remapping.tar.gz
+            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.Remapping.tar.gz
+            tar -xzvf 8.1.3_c12_6ranks_standard.Remapping.tar.gz
             cd -
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
@@ -67,8 +67,8 @@ jobs:
         - name: Orchestrated dace:cpu Acoustics
           run: |
             cd test_data
-            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6_ranks_standard.DynCore.tar.gz
-            tar -xzvf 8.1.3_c12_6_ranks_standard.DynCore.tar.gz
+            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.DynCore.tar.gz
+            tar -xzvf 8.1.3_c12_6ranks_standard.DynCore.tar.gz
             cd -
             export FV3_DACEMODE=BuildAndRun
             export PACE_FLOAT_PRECISION=64
