--- a/tests/savepoint/translate/overrides/standard.yaml
+++ b/tests/savepoint/translate/overrides/standard.yaml
@@ -207,8 +207,7 @@ Del2Cubed:
     max_error: 8e-12
 
 FvTp2d:
-  - backend: dace:cpu
-    max_error: 2e-13
+  max_error: 2e-13 # changes in code for mass conservation at single precision, which is not included in original translate tests.
 
 FxAdv:
   - backend: dace:cpu
