--- a/tests/savepoint/translate/overrides/standard.yaml
+++ b/tests/savepoint/translate/overrides/standard.yaml
@@ -200,14 +200,14 @@ DivergenceDamping:
     max_error: 1e-9
 
 DelnFlux:
-  max_error: 2e-13 # changes in code for mass conservation at single precision, which is not included in original translate tests.
+  - max_error: 2e-13 # changes in code for mass conservation at single precision, which is not included in original translate tests.
 
 Del2Cubed:
   - backend: dace:cpu
     max_error: 8e-12
 
 FvTp2d:
-  max_error: 2e-13 # changes in code for mass conservation at single precision, which is not included in original translate tests.
+  - max_error: 2e-13 # changes in code for mass conservation at single precision, which is not included in original translate tests.
 
 FxAdv:
   - backend: dace:cpu
